Fix privileges on setFCV virtual namespace

XMLWordPrintableJSON

    • Minor Change
    • ALL
    • v3.4
    • Platforms 2018-08-13, Platforms 2018-08-27
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In MongoDB 3.6 and MongoDB 3.4, setFeatureCompatibilityVersion checks for a privilege on a virtual namespace. As of SERVER-31983, setFCV has its own ActionType, so no work is required for 4.0 or master.

            Assignee:
            Spencer Jackson
            Reporter:
            Maria van Keulen
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: