SERVER-36149: Make $setFeatureCompatibilityVersion a non-normal resource